--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,10 @@
 		<!-- Your own application should inherit from spring-boot-starter-parent -->
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-samples</artifactId>
-		<version>${revision}</version>
+		<version>1.0</version>
 	</parent>
 	<artifactId>spring-boot-sample-devtools</artifactId>
-	<name>Spring Boot Developer Tools Sample</name>
+	<name>nihao</name>
 	<description>Spring Boot Developer Tools Sample</description>
 	<properties>
 		<main.basedir>${basedir}/../..</main.basedir>
