--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,21 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+	
+	<groupId>com.tankgo</groupId>
 	<artifactId>spring-boot-sample-devtools</artifactId>
+	<version>1.0.0</version>
+	<packaging>jar</packaging>
+
+
 	<name>nihao</name>
 	<description>Spring Boot Developer Tools Sample</description>
+	
 	<properties>
-		<main.basedir>${basedir}/../..</main.basedir>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<java.version>1.8</java.version>
 	</properties>
+	
 	<dependencies>
 		<!-- Compile -->
 		<dependency>
