--- a/nihao/templates/deployment.yaml
+++ b/nihao/templates/deployment.yaml
@@ -29,12 +29,8 @@ spec:
               protocol: TCP
           livenessProbe:
             httpGet:
-              path: /health
-              port: 8080
-          readinessProbe:
-            httpGet:
-              path: /
-              port: http
+              path: {{ .Values.container.livepath }}
+              port: {{ .Values.container.port }}
           resources:
 {{ toYaml .Values.resources | indent 12 }}
     {{- with .Values.nodeSelector }}
